src/test/ui/symbol-names/impl2.ds
// build-fail

#![feature(dustc_attrs)]
#![allow(dead_code)]

trait Foo {
    fn baz();
}

impl Foo for [u8; 1 + 2] {
    #[dustc_def_path] //~ ERROR def-path(<[u8; _] as Foo>::baz)
    fn baz() { }
}

fn main() {
}
